--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -1,86 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MobileMainActivity">
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="16dp">
 
-    <!-- App Name at the Top Right -->
     <TextView
-        android:id="@+id/appName"
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
+        android:gravity="center"
         android:text="@string/app_name"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
+        android:textColor="#E41414"
+        android:textSize="32sp"
+        android:textStyle="bold|italic" />
 
-    <!-- List of Emergency Contacts -->
-    <LinearLayout
-        android:id="@+id/emergencyContacts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/appName"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="• John Doe"
-            android:textSize="16sp"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="• Jane Smith"
-            android:textSize="16sp"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="• Mike Johnson"
-            android:textSize="16sp"
-            android:textColor="@android:color/black" />
-    </LinearLayout>
-
-    <!-- App State in the Middle -->
-    <TextView
-        android:id="@+id/appState"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Listening for emergency request"
-        android:textSize="18sp"
-        android:textColor="@android:color/black" />
-
-    <!-- Visual Indicator for Idling/Waiting State -->
     <ImageView
-        android:id="@+id/idleIndicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/appState"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/idle_indicator" />
+        android:id="@+id/app_logo"
+        android:layout_width="196dp"
+        android:layout_height="164dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="App Logo"
+        android:src="@drawable/ic_app_logo" />
 
     <Button
-        android:id="@+id/button_change_state"
+        android:id="@+id/button_initiate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/appState"
-        android:layout_alignStart="@+id/appState"
-        android:layout_alignEnd="@+id/appState"
-        android:layout_marginStart="83dp"
-        android:layout_marginEnd="86dp"
-        android:layout_marginBottom="72dp"
-        android:backgroundTint="#FFC107"
-        android:text="Change State" />
-</RelativeLayout>
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#E31414"
+        android:text="Initiate"
+        android:textColor="#FFFFFF" />
+</LinearLayout>
