--- a/mobile/src/main/res/layout/activity_setup.xml
+++ b/mobile/src/main/res/layout/activity_setup.xml
@@ -23,5 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finish"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="#E31414"
+        android:textColor="#FFFFFF"
+        />
 </LinearLayout>
