--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:src="@drawable/ic_app_logo" />
 
     <Button
-        android:id="@+id/button_initiate"
+        android:id="@+id/initiate_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
