--- a/mobile/src/main/res/layout/fragment_emergency_contacts.xml
+++ b/mobile/src/main/res/layout/fragment_emergency_contacts.xml
@@ -10,20 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Emergency Services"
+        android:text="Emergency Service Number"
         android:textColor="#FF0000"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <!-- Spinner for Emergency Services -->
-    <!-- Label for Emergency Contacts -->
 
-    <Spinner
-        android:id="@+id/emergency_services_spinner"
+    <EditText
+        android:id="@+id/emergency_service_number"
         android:layout_width="match_parent"
-        android:layout_height="49dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="wrap_content"
+        android:inputType="phone"
+        android:hint="Enter emergency service number" />
 
+    <!-- Label for Emergency Contacts -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
